@@ -1,3 +1,9 @@
+2007-08-09  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-wp-xml.c: (gnome_wp_xml_load_list),
+	(gnome_wp_xml_save_list):
+	* theme-installer.c: (gnome_theme_install_from_uri): tiny optimization
+
 2007-08-08  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-style.c: (gtk_theme_changed): revert r7973 because it
